deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pretend-aws
  namespace: app-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pretend-aws
  template:
    metadata:
      labels:
        app: pretend-aws
    spec:
      containers:
        - name: localstack
          image: localstack/localstack:latest
          ports:
            - containerPort: 4566
          volumeMounts:
            - name: data
              mountPath: /var/lib/localstack
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /_localstack/health
              port: 4566
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /_localstack/health
              port: 4566
            initialDelaySeconds: 20
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pretend-aws-data
