service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pretend-aws
  namespace: app-dev
spec:
  selector:
    app: pretend-aws
  ports:
    - port: 80
      targetPort: 4566
